# dioxus_use_resource_issue

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
server/: Cargo.toml
ui/: Cargo.toml
ui/src/: echo.rs  hero.rs
web/: Cargo.toml
web/assets/: blog.css  tailwind.css
web/src/: main.rs
web/src/server/: mod.rs  session.rs
web/src/server_fn/: session.rs
web/src/web/: mod.rs
web/src/web/ui/: log.rs
web/src/web/views/: blog.rs  home.rs
