[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "server",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.1"
homepage = "https://github.com/ufoscout/WeWeb"
repository = "https://github.com/ufoscout/WeWeb"
keywords = []
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
dioxus-cli-config = { version = "0.6.0" }
dioxus-fullstack = { version = "0.6.0"}
dioxus-web = { version = "0.6.0" }
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1" }
tower-sessions = { version = "0.13" }

# workspace
ui = { path = "ui" }
server = { path = "server" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
